# meta-video-filter

./: .gitignore  BUILD.md  MetaVideoFilter.spec  README.md  bestpicket.py  build_entry.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release-installers.yml  release-macos.yml
installer/: MetaVideoFilter.iss
meta_video_filter/: __init__.py  app.py  config.py  dependencies.py  distribution.py  export.py  pipeline.py  scoring.py
scripts/: build_linux_appimage.sh  build_linux_installer.sh  build_macos_installer.sh  build_windows_installer.ps1  prepare_yolo_model.py
tests/: test_dependencies.py  test_distribution.py  test_export_math.py  test_pipeline_failures.py  test_pipeline_outputs.py  test_scoring_helpers.py
